(feature) Added an import alias for the src folder to the frontend project. Introduced reactRender function to clean up the main code entry for the frontend projet. Updated dependencies.

--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "starter",
     "starter-template"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "workspaces": [
+    "packages/*",
+    "!**/test/**"
+  ]
 }
