frontend: Created SuiProvider which encapsulates QueryClientProvider, SuiClientProvider and WalletProvider. Added network config. Removed unnecessary template code.

--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "sui-dapp-starter",
   "version": "0.0.0",
   "description": "Better full-stack Sui dapp starter",
-  "main": "index.js",
   "scripts": {
-    "dev": "pnpm --filter frontend dev",
-    "build": "pnpm --filter frontend build",
-    "lint": "pnpm --filter frontend lint",
-    "preview": "pnpm --filter frontend preview",
+    "frontend:dev": "pnpm --filter frontend dev",
+    "frontend:build": "pnpm --filter frontend build",
+    "frontend:lint": "pnpm --filter frontend lint",
+    "frontend:preview": "pnpm --filter frontend preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "packageManager": "pnpm@9.0.6",
