--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mysten/dapp-kit": "^0.12.11",
+    "@mysten/sui.js": "^0.51.2",
+    "@tanstack/react-query": "^5.32.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
