--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "version": "0.0.0",
   "description": "Better full-stack Sui dapp starter",
   "scripts": {
+    "dev": "pnpm frontend:dev",
+
     "frontend:dev": "pnpm --filter frontend dev",
     "frontend:build": "pnpm --filter frontend build",
     "frontend:lint": "pnpm --filter frontend lint",
     "frontend:preview": "pnpm --filter frontend preview",
+    
+    "localnet:start": "pnpm --filter backend localnet:start",
+    "localnet:stop": "pnpm --filter backend localnet:stop",
+    "localnet:deploy": "pnpm --filter backend localnet:deploy",
+
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "packageManager": "pnpm@9.0.6",
