backend: Added name getter and setter to the Greeting contract. Improved code comments.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "frontend:lint": "pnpm --filter frontend lint",
     "frontend:preview": "pnpm --filter frontend preview",
     
+    "backend:build": "pnpm --filter backend build",
     "localnet:start": "pnpm --filter backend localnet:start",
     "localnet:stop": "pnpm --filter backend localnet:stop",
     "localnet:deploy": "pnpm --filter backend localnet:deploy",
