--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "pnpm frontend:dev",
     "start": "pnpm dev",
+    "test": "pnpm backend:test",
+    "build": "pnpm backend:build && pnpm frontend:build",
 
     "frontend:dev": "pnpm --filter frontend dev",
     "frontend:build": "pnpm --filter frontend build",
@@ -19,9 +21,7 @@
     "localnet:faucet": "pnpm --filter backend localnet:faucet",
     "localnet:regen": "pnpm --filter backend localnet:regen",
     "localnet:deploy": "pnpm --filter backend localnet:deploy",
-    "localnet:address": "pnpm --filter backend localnet:address",
-
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "localnet:address": "pnpm --filter backend localnet:address"
   },
   "packageManager": "pnpm@9.0.6",
   "keywords": [
