--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "@mysten/dapp-kit": "^0.12.11",
     "@mysten/sui.js": "^0.51.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/themes": "^3.0.3",
     "@tanstack/react-query": "^5.32.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-use": "^17.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
@@ -25,16 +29,16 @@
     "@vitejs/plugin-react-swc": "^3.6.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-tailwindcss": "^3.12.0",
     "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
-    "vite-tsconfig-paths": "^4.3.2",
-    "prettier": "^3.2.5"
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
