frontend/backend: Implemented copying the deployed package ID to the frontend project after deployment.

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "build": "lsui move build -d -p ./move/greeting",
     "test": "lsui move test -d -p ./move/greeting",
-    "localnet:deploy": "cd move/greeting && localnet publish",
+    "localnet:deploy": "cd move/greeting && localnet publish && cd ../.. && pnpm copy-package-id",
+
+    "copy-package-id": "node ./scripts/copy-package-id.mjs",
 
     "localnet:start": "localnet start",
     "localnet:stop": "localnet stop",
