--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write './index.html' './src/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "@mysten/bcs": "^0.11.1",
     "@mysten/dapp-kit": "^0.12.12",
     "@mysten/sui.js": "^0.51.2",
     "@radix-ui/react-icons": "^1.3.0",
