--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "sui-dapp-starter",
   "version": "0.0.0",
   "description": "Better full-stack Sui dapp starter",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kkomelin/sui-dapp-starter.git"
+  },
   "scripts": {
     "dev": "pnpm frontend:dev",
     "start": "pnpm dev",
@@ -45,5 +49,8 @@
   "workspaces": [
     "packages/*",
     "!**/test/**"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/kkomelin/sui-dapp-starter/issues"
+  }
 }
