--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/themes": "^3.0.3",
     "@tanstack/react-query": "^5.35.1",
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
