--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "localnet:address": "pnpm --filter backend localnet:address",
     "localnet:explorer:start":  "pnpm --filter backend localnet:explorer:start",
     "localnet:explorer:stop":  "pnpm --filter backend localnet:explorer:stop",
+    "localnet:explorer:restart":  "pnpm --filter backend localnet:explorer:restart",
     "localnet:explorer:rebuild":  "pnpm --filter backend localnet:explorer:rebuild"
   },
   "engines": {
