--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,11 +14,11 @@
     "@mysten/bcs": "^0.11.1",
     "@mysten/dapp-kit": "^0.13.0",
     "@mysten/sui.js": "^0.54.1",
-    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/themes": "^3.0.3",
     "@tanstack/react-query": "^5.36.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.378.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
