infra: Added Suibase VSCode extenstion to the list of recommended ones.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "mysten.move",
     "damirka.move-syntax",
     "tamasfe.even-better-toml",
+    "suibase.suibase",
 
     // Frontend
     "esbenp.prettier-vscode"
