docs: Added meta keywords..

--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "sui",
     "sui-dapp",
     "sui-dapp-starter",
+    "sui-blockchain",
+    "sui-boilerplate",
     "blockchain",
+    "boilerplate",
     "starter",
     "starter-template"
   ],
