backend/frontend: Made it possilbe to pass the network type to copy-package-id script.

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,7 +6,7 @@
     "build": "lsui move build -d -p ./move/greeting",
     "test": "lsui move test -d -p ./move/greeting",
     "localnet:deploy": "localnet publish --path ${PWD}/move/greeting && pnpm copy-package-id",
-    "copy-package-id": "node ./scripts/copy-package-id",
+    "copy-package-id": "node ./scripts/copy-package-id -n localnet",
     "localnet:start": "localnet start",
     "localnet:stop": "localnet stop",
     "localnet:status": "localnet status",
