--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "frontend:lint": "pnpm --filter frontend lint",
     "frontend:preview": "pnpm --filter frontend preview",
     "frontend:format": "pnpm --filter frontend format",
+    "frontend:deploy:init": "pnpm --filter frontend deploy:firebase:init",
+    "frontend:deploy": "pnpm --filter frontend deploy:firebase",
     
     "backend:build": "pnpm --filter backend build",
     "backend:test": "pnpm --filter backend test",
