--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "format": "prettier --write './index.html' './src/**/*.{js,jsx,ts,tsx}'"
+    "format": "prettier --write './index.html' './src/**/*.{js,jsx,ts,tsx}'",
+    "deploy:firebase:init": "firebase login && firebase use --add",
+    "deploy:firebase": "firebase deploy --only hosting"
   },
   "dependencies": {
     "@mysten/bcs": "^0.11.1",
