frontend: Added useBalance hook and Balance component.

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,9 +16,11 @@
     "@mysten/bcs": "^0.11.1",
     "@mysten/dapp-kit": "^0.13.1",
     "@mysten/sui.js": "^0.54.1",
+    "@mysten/wallet-standard": "^0.11.6",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/themes": "^3.0.4",
     "@tanstack/react-query": "^5.36.2",
+    "bignumber.js": "^9.1.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
     "react": "^18.3.1",
