--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,6 +17,7 @@
     "@mysten/dapp-kit": "^0.13.1",
     "@mysten/sui.js": "^0.54.1",
     "@mysten/wallet-standard": "^0.11.6",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/themes": "^3.0.4",
     "@tanstack/react-query": "^5.36.2",
@@ -29,6 +30,7 @@
     "react-use": "^17.5.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
