--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,18 +5,37 @@
   "scripts": {
     "build": "lsui move build -d -p ./move/greeting",
     "test": "lsui move test -d -p ./move/greeting",
-    "localnet:deploy": "localnet publish --path ${PWD}/move/greeting && pnpm copy-package-id",
-    "copy-package-id": "node ./scripts/copy-package-id -n localnet",
+    "copy-package-id": "node ./scripts/copy-package-id",
+
     "localnet:start": "localnet start",
     "localnet:stop": "localnet stop",
     "localnet:status": "localnet status",
     "localnet:faucet": "localnet faucet",
     "localnet:regen": "localnet regen",
+    "localnet:update": "localnet update",
     "localnet:address": "lsui client active-address",
+    "localnet:deploy": "localnet publish --path ${PWD}/move/greeting && pnpm copy-package-id -n localnet",
+
     "localnet:explorer:start": "sui-explorer-local start",
     "localnet:explorer:stop": "sui-explorer-local stop",
     "localnet:explorer:restart": "sui-explorer-local restart",
-    "localnet:explorer:rebuild": "sui-explorer-local rebuild"
+    "localnet:explorer:rebuild": "sui-explorer-local rebuild",
+
+    "devnet:start": "devnet start",
+    "devnet:stop": "devnet stop",
+    "devnet:status": "devnet status",
+    "devnet:update": "devnet update",
+    "devnet:links": "devnet links",
+    "devnet:address": "dsui client active-address",
+    "devnet:deploy": "devnet publish --path ${PWD}/move/greeting && pnpm copy-package-id -n devnet",
+
+    "testnet:start": "testnet start",
+    "testnet:stop": "testnet stop",
+    "testnet:status": "testnet status",
+    "testnet:update": "testnet update",
+    "testnet:links": "testnet links",
+    "testnet:address": "tsui client active-address",
+    "testnet:deploy": "testnet publish --path ${PWD}/move/greeting && pnpm copy-package-id -n testnet"
   },
   "devDependencies": {
     "env-file-rw": "^1.0.0",
