frontend: Updated code to use the latest version of Sui SDK.

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,23 +13,23 @@
     "deploy:firebase": "firebase deploy --only hosting"
   },
   "dependencies": {
-    "@mysten/dapp-kit": "^0.13.2",
-    "@mysten/sui.js": "^0.54.1",
-    "@mysten/wallet-standard": "^0.11.6",
+    "@mysten/dapp-kit": "^0.14.5",
+    "@mysten/sui": "^1.0.5",
+    "@mysten/wallet-standard": "^0.12.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/themes": "^3.0.5",
     "@tanstack/react-query": "^5.40.1",
     "bignumber.js": "^9.1.2",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.378.0",
+    "lucide-react": "^0.383.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-use": "^17.5.0"
   },
   "devDependencies": {
-    "@types/node": "^20.14.1",
+    "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
@@ -41,8 +41,8 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.38",
-    "prettier": "^3.3.0",
-    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prettier": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.12",
