--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "localnet:regen": "pnpm --filter backend localnet:regen",
     "localnet:update": "pnpm --filter backend localnet:update",
     "localnet:deploy": "pnpm --filter backend localnet:deploy",
+    "localnet:deploy:no-dependency-check": "pnpm --filter backend localnet:deploy:no-dependency-check",
     "localnet:address": "pnpm --filter backend localnet:address",
     "localnet:explorer:start":  "pnpm --filter backend localnet:explorer:start",
     "localnet:explorer:stop":  "pnpm --filter backend localnet:explorer:stop",
