--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write './index.html' './src/**/*.{js,jsx,ts,tsx}'",
     "deploy:firebase:init": "firebase login && firebase use --add",
     "deploy:firebase": "firebase deploy --only hosting",
-    "deploy:walrus": "pnpm run build && site-builder --config ./walrus.yaml publish ./dist"
+    "deploy:walrus": "pnpm run build && site-builder --config ./walrus.yaml --wallet ~/suibase/workdirs/testnet/config/client.yaml  publish ./dist"
   },
   "dependencies": {
     "@mysten/dapp-kit": "^0.14.9",
