chore: Disabled Dependabot notifications for lucide-react.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,5 @@ updates:
       update-types: ["version-update:semver-major"]
     - dependency-name: "eslint-config-prettier"
       update-types: ["version-update:semver-major"]
+    - dependency-name: "lucide-react"
+      update-types: ["version-update:semver-patch"]
